--- a/utsMopro/app/src/main/AndroidManifest.xml
+++ b/utsMopro/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".PesanKue" />
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".PesanActivity"></activity>
+        <activity android:name=".PesananJadi"></activity>
     </application>
 
 </manifest>
